[package]
name = "tomlcli"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
license = "MIT"
repository = "https://github.com/sergeysova/tomlcli.rs"
documentation = "https://docs.rs/tomlcli/"
readme = "README.md"
description = "Parse and query toml files"
keywords = ["toml", "cli", "parser", "print", "console", "terminal"]

[dependencies]
toml = "0.4.5"
colored = "1.6.0"
