[package]
name = "tomlcli"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
license = "MIT"
repository = "https://github.com/sergeysova/tomlcli.rs"
documentation = "https://docs.rs/tomlcli/"
readme = "README.md"
description = "Pretty print and query TOML files"
keywords = ["toml", "cli", "print", "console", "terminal"]

[dependencies]
toml = "0.4.5"
colored = "1.6.0"
clap = "2.29.2"

[[bin]]
name = "toml"
path = "./src/main.rs"
